# genshin-birthday-calendar

./: README.md  calendar.ics  pyproject.toml  run.py
.github/workflows/: update-calendar.yml
