[project]
name = "genshin-birthday-calendar"
version = "0.1.0"
description = "Genshin Impact Birthday Calendar"
authors = [{ name = "Karako", email = "karakohear@gmail.com" }]
dependencies = [
    "pydantic>=2.5.2",
    "httpx[socks]>=0.26.0",
    "six>=1.16.0",
    "pyparsing>=3.1.1",
    "python-dateutil>=2.8.2",
    "tzdata>=2023.3",
    "ical>=12.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[dependency-groups]
dev = ["black>=23.12.0"]
